2011-01-12  Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSNumberFormatter.m: Implemented more methods.
	([-stringForObjectValue:]): Add code for NSNumberFormatterBehavior10_4.

2011-01-11  Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSLocale.m: Removed NSLog used for debugging.
	* Source/NSNumberFormatter.m: Fixed decimal separator behavior
	for OS X > 10.4.

2011-01-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: ([-stringByStandardizingPath]) Fix bug when
	dealing with three or more separators at the start of a path ...
	should condense them to a single separator.  Thanks to Robert Slover
	for pointing this out.

2011-01-10  Richard Frith-Macdonald <rfm@gnu.org>

	* configure: regenerate
	* Headers/Additions/GNUstepBase/config.h.in: regenerate

2011-01-09  Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSNumberFormatter.m: Implemented a few more methods.
	* Source/NSLocale.m: Added code requiring NSNumberFormatter code.

2011-01-09  Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/Additions/GNUstepBase/config.h.in:
	* Headers/Foundation/NSNumberFormatter.h:
	* Source/NSNumberFormatter.m: Started adding code for new methods.

2011-01-08  Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSLocale.m: Fixed a few bugs exposed by testsuite.

2011-01-07  Stefan Bidigaray <stefanbidi@gmail.com>

	* configure:
	* configure.ac: Added check for unicode/unum.h.
	* Headers/Foundation/NSNumberFormatter.h:
	* Source/NSNumberFormatter.m: Added stub for 10.4+ methods.

2011-01-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m: Make zombie log message match current OSX.
	* Source/NSURL.m: Fix -resourceSpecifier by removing incorrect
	special handling for file URLs.
	* Source/NSXMLParser.m: Maketolerant of whitespace around the '='
	in an attribute.  Fix check for xml header being at start of doc.

2011-01-06  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSObject.m (GSAtomicIncrement, GSAtomicDecrement): MIPS64