@@ -1,3 +1,9 @@
+2011-01-17  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/GSFormat.m: Print '(null)' rather than '(nil)' for a nil
+	object as this seems to be what OSX does now.
+	* Source/NSXMLParser.m: Implement partial support for declarations.
+
 2011-01-12  Stefan Bidigaray <stefanbidi@gmail.com>
 
 	* Source/NSNumberFormatter.m: Implemented more methods.
